# CMDPaint

./: .gitignore  App.cpp  App.h  Button.cpp  Button.h  CMakeLists.txt  Canvas.cpp  Canvas.h  CanvasActions.cpp  CanvasActions.h  ComponentsHelpers.cpp  ComponentsHelpers.hpp  Configuration.hpp  Console.cpp  Console.hpp  ConsoleDraw.cpp  ConsoleInput.cpp  Divider.cpp  Divider.h  Edit.cpp  Edit.h  Element.hpp  FileManager.cpp  FileManager.h  Label.cpp  PixelPaint.sln  PixelPaint.vcxproj  PixelPaint.vcxproj.filters  README.md  UserInterface.cpp  UserInterface.h  components.hpp  controls.h  core.hpp  framework.hpp  input.hpp  main.cpp
code.old/: Makefile
code.old/src/: app.c  app_layout.c  app_layout.h  main.txt
code.old/src/.old/: app.h  canvas.c  canvas.h  console_draw.c  console_ui.c  files.c  toolbar.c  toolbar.h  types.h  utils.c  utils.h  viewport.c  viewport.h
code.old/src/.old/ui/: ui.c  ui.h  ui_button.c  ui_button.h  ui_label.c  ui_label.h  ui_node.c  ui_node.h  widgets.h
code.old/src/controls/: controls.h  controls_impl.c  controls_input.c  controls_types.h
code.old/src/core/: console.h  console_draw.c  console_impl.c  console_input.c  core.h  framework.h  input_types.h
examples/: cmdpaint-title.bytecolor  enemy.bytecolor  spaceship.bytecolor
examples/cpp/: CMakeLists.txt  example1.cpp
loader/cpp-loader/: bytecolor_loader.cpp  bytecolor_loader.hpp
src/: main.cpp
src/app/: App.cpp  App.hpp  Configuration.hpp
src/components/: ComponentTypes.hpp  components.hpp
src/components/canvas/: Canvas.cpp  Canvas.hpp  CanvasActions.cpp  CanvasActions.hpp
src/components/file_manager/: FileManager.cpp  FileManager.hpp
src/components/helpers/: ComponentHelpers.cpp  ComponentHelpers.hpp
src/components/user_interface/: UserInterface.cpp  UserInterface.hpp
src/core/: core.hpp  framework.hpp
src/core/console/: Console.cpp  Console.hpp
src/core/controls/: Button.cpp  Button.hpp  Divider.cpp  Edit.cpp  Edit.hpp  Element.hpp  Label.cpp  Label.hpp  controls.hpp
